--- a/EveryYeoga/.classpath
+++ b/EveryYeoga/.classpath
@@ -29,6 +29,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="C:/Users/kosta/Downloads/mybatis-3.4.5/mybatis-3.4.5/mybatis-3.4.5.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
