--- a/EveryYeoga/WebContent/WEB-INF/web.xml
+++ b/EveryYeoga/WebContent/WEB-INF/web.xml
@@ -22,7 +22,9 @@
 
 	<servlet-mapping>
 		<servlet-name>dispatcher</servlet-name>
-		<url-pattern>/</url-pattern>
+		<url-pattern>*.do</url-pattern>
+		
+		
 	</servlet-mapping>
   
   
