--- a/EveryYeoga/WebContent/WEB-INF/web.xml
+++ b/EveryYeoga/WebContent/WEB-INF/web.xml
@@ -39,7 +39,9 @@
 		<url-pattern>*.swf</url-pattern>
 	</servlet-mapping>
 
-
+  <error-page>
+  	<location>/views/common/errorPage.jsp</location>
+  </error-page>
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.htm</welcome-file>
