--- a/EveryYeoga/WebContent/WEB-INF/web.xml
+++ b/EveryYeoga/WebContent/WEB-INF/web.xml
@@ -46,10 +46,10 @@
 	</servlet-mapping>
 
   <error-page>
-  	<location>/views/common/errorPage.jsp</location>
+  	<location>/views/layout/errorPage.jsp</location>
   </error-page>
 	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
+		<welcome-file>/views/main.jsp</welcome-file>
 		<welcome-file>index.htm</welcome-file>
 		<welcome-file>index.jsp</welcome-file>
 		<welcome-file>default.html</welcome-file>
